// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`switchButtonField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_jfa67t2 uv_jfa67t0 uv_mxir930 uv_mxir932j"
      >
        <div
          class="uv_jfa67t4 uv_jfa67t3 uv_s0xyv00 uv_s0xyv01 uv_s0xyv05 uv_s0xyv06 uv_mxir930 uv_mxir93v uv_mxir932d uv_mxir935j"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-left"
          data-type="radio"
          role="button"
          style="--uv_1o893js3: 1; --uv_1msl0go0: none; --uv_1msl0go1: inline; --uv_1msl0go2: 100%;"
          tabindex="0"
        >
          <div
            class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
          >
            <div
              aria-disabled="false"
              class="uv_s0xyv0d uv_bnlb224 uv_bnlb222"
              data-checked="false"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                class="uv_bnlb22a"
                id="_r_4_"
                name="test"
                tabindex="-1"
                type="radio"
                value="left"
              />
              <svg
                class="uv_bnlb22b"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="uv_bnlb22e"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="uv_bnlb22d"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="uv_bnlb22c"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                for="_r_4_"
              >
                Left
              </label>
            </div>
          </div>
        </div>
        <div
          class="uv_jfa67t4 uv_jfa67t3 uv_s0xyv00 uv_s0xyv01 uv_s0xyv05 uv_s0xyv06 uv_mxir930 uv_mxir93v uv_mxir932d uv_mxir935j"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-right"
          data-type="radio"
          role="button"
          style="--uv_1o893js3: 1; --uv_1msl0go0: none; --uv_1msl0go1: inline; --uv_1msl0go2: 100%;"
          tabindex="0"
        >
          <div
            class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
          >
            <div
              aria-disabled="false"
              class="uv_s0xyv0d uv_bnlb224 uv_bnlb222"
              data-checked="false"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                class="uv_bnlb22a"
                id="_r_c_"
                name="test"
                tabindex="-1"
                type="radio"
                value="right"
              />
              <svg
                class="uv_bnlb22b"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="uv_bnlb22e"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="uv_bnlb22d"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="uv_bnlb22c"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                for="_r_c_"
              >
                Right
              </label>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`switchButtonField > should works with defaultValues 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_jfa67t2 uv_jfa67t0 uv_mxir930 uv_mxir932j"
      >
        <div
          class="uv_jfa67t4 uv_jfa67t3 uv_s0xyv00 uv_s0xyv01 uv_s0xyv05 uv_s0xyv06 uv_mxir930 uv_mxir93v uv_mxir932d uv_mxir935j"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-left"
          data-type="radio"
          role="button"
          style="--uv_1o893js3: 1; --uv_1msl0go0: none; --uv_1msl0go1: inline; --uv_1msl0go2: 100%;"
          tabindex="0"
        >
          <div
            class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
          >
            <div
              aria-disabled="false"
              class="uv_s0xyv0d uv_bnlb224 uv_bnlb222"
              data-checked="false"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                class="uv_bnlb22a"
                id="_r_m_"
                name="test"
                tabindex="-1"
                type="radio"
                value="left"
              />
              <svg
                class="uv_bnlb22b"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="uv_bnlb22e"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="uv_bnlb22d"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="uv_bnlb22c"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                for="_r_m_"
              >
                Left
              </label>
            </div>
          </div>
        </div>
        <div
          class="uv_jfa67t4 uv_jfa67t3 uv_s0xyv00 uv_s0xyv01 uv_s0xyv05 uv_s0xyv06 uv_mxir930 uv_mxir93v uv_mxir932d uv_mxir935j"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-right"
          data-type="radio"
          role="button"
          style="--uv_1o893js3: 1; --uv_1msl0go0: none; --uv_1msl0go1: inline; --uv_1msl0go2: 100%;"
          tabindex="0"
        >
          <div
            class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
          >
            <div
              aria-disabled="false"
              class="uv_s0xyv0d uv_bnlb224 uv_bnlb222"
              data-checked="false"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                class="uv_bnlb22a"
                id="_r_u_"
                name="test"
                tabindex="-1"
                type="radio"
                value="right"
              />
              <svg
                class="uv_bnlb22b"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="uv_bnlb22e"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="uv_bnlb22d"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="uv_bnlb22c"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                for="_r_u_"
              >
                Right
              </label>
            </div>
          </div>
        </div>
      </div>
      ,
      <button
        class="uv_1x0t66m0 uv_1x0t66m1 uv_1x0t66m3 uv_1x0t66m9 uv_1x0t66me uv_1x0t66mi uv_1x0t66ml"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
